--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -31,10 +31,15 @@
             <div class="card-header">
                 <h2 class="text-center">Registration</h2>
             </div>
+            <div th:if="${param.success}">
+                <div class="alert alert-info">
+                    You have successfully registered our app!
+                </div>
+            </div>
             <div class="card-body">
                 <form method="post" role="form"  th:action="@{/register/save}" th:object="${user}">
                     <div class="form-group mb-3">
-                        <label class="form-label">Student First Name</label>
+                        <label class="form-label">First Name</label>
                         <input
                                 class="form-control"
                                 id="firstName"
@@ -43,11 +48,9 @@
                                 type="text"
                                 th:field="*{firstName}"
                         />
-                        <p th:if="${#fields.hasErrors('firstName')}" class="text-danger"
-                           th:errors="*{firstName}"></p>
                     </div>
                     <div class="form-group mb-3">
-                        <label class="form-label">Student Last Name</label>
+                        <label class="form-label">Last Name</label>
                         <input
                                 class="form-control"
                                 id="lastName"
@@ -56,11 +59,9 @@
                                 type="text"
                                 th:field="*{lastName}"
                         />
-                        <p th:if="${#fields.hasErrors('lastName')}" class="text-danger"
-                           th:errors="*{lastName}"></p>
                     </div>
                     <div class="form-group mb-3">
-                        <label class="form-label">Student Email-Id</label>
+                        <label class="form-label">Email</label>
                         <input
                                 class="form-control"
                                 id="email"
@@ -69,8 +70,21 @@
                                 type="email"
                                 th:field="*{email}"
                         />
-                        <p th:if="${#fields.hasErrors('email')}" class="text-danger"
-                           th:errors="*{email}"></p>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="form-label">Email</label>
+                        <input
+                                class="form-control"
+                                id="password"
+                                name="password"
+                                placeholder="Enter password"
+                                type="password"
+                                th:field="*{password}"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <div class="btn btn-primary" type="submit" >Register</div>
+                        <span>Already registered? <a th:href="@{/login}">Login</a> </span>
                     </div>
                 </form>
             </div>
