--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,16 +17,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}" >Login</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<br/> <br/> <br/>
-
+<br /><br /><br />
 <div class="container">
-    <div class="row col-md offset-md-2">
+    <div class="row col-md-8 offset-md-2">
         <div class="card">
             <div class="card-header">
                 <h2 class="text-center">Registration</h2>
@@ -37,7 +36,12 @@
                 </div>
             </div>
             <div class="card-body">
-                <form method="post" role="form"  th:action="@{/register/save}" th:object="${user}">
+                <form
+                        method="post"
+                        role="form"
+                        th:action="@{/register/save}"
+                        th:object="${user}"
+                >
                     <div class="form-group mb-3">
                         <label class="form-label">First Name</label>
                         <input
@@ -45,10 +49,13 @@
                                 id="firstName"
                                 name="firstName"
                                 placeholder="Enter first name"
-                                type="text"
                                 th:field="*{firstName}"
+                                type="text"
                         />
+                        <p th:errors = "*{firstName}" class="text-danger"
+                           th:if="${#fields.hasErrors('firstName')}"></p>
                     </div>
+
                     <div class="form-group mb-3">
                         <label class="form-label">Last Name</label>
                         <input
@@ -56,10 +63,13 @@
                                 id="lastName"
                                 name="lastName"
                                 placeholder="Enter last name"
-                                type="text"
                                 th:field="*{lastName}"
+                                type="text"
                         />
+                        <p th:errors = "*{lastName}" class="text-danger"
+                           th:if="${#fields.hasErrors('lastName')}"></p>
                     </div>
+
                     <div class="form-group mb-3">
                         <label class="form-label">Email</label>
                         <input
@@ -67,24 +77,29 @@
                                 id="email"
                                 name="email"
                                 placeholder="Enter email address"
-                                type="email"
                                 th:field="*{email}"
+                                type="email"
                         />
+                        <p th:errors = "*{email}" class="text-danger"
+                           th:if="${#fields.hasErrors('email')}"></p>
                     </div>
+
                     <div class="form-group mb-3">
-                        <label class="form-label">Email</label>
+                        <label class="form-label">Password</label>
                         <input
                                 class="form-control"
                                 id="password"
                                 name="password"
                                 placeholder="Enter password"
-                                type="password"
                                 th:field="*{password}"
+                                type="password"
                         />
+                        <p th:errors = "*{password}" class="text-danger"
+                           th:if="${#fields.hasErrors('password')}"></p>
                     </div>
                     <div class="form-group">
-                        <div class="btn btn-primary" type="submit" >Register</div>
-                        <span>Already registered? <a th:href="@{/login}">Login</a> </span>
+                        <button class="btn btn-primary" type="submit">Register</button>
+                        <span>Already registered? <a th:href="@{/login}">Login here</a></span>
                     </div>
                 </form>
             </div>
