--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -20,7 +20,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/student/new}" >Create Student</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/student/new}" >Create student</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/users}" >User</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/logout}" >Logout</a>
                 </li>
             </ul>
         </div>
