--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,11 +17,33 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/login}" >Login</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/logout}" >Logout</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
+<div class="container">
+    <div class="row col-md-10">
+        <h2>List of Registered Users</h2>
+    </div>
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each = "user : ${users}">
+            <td th:text = "${user.firstName}"></td>
+            <td th:text = "${user.lastName}"></td>
+            <td th:text = "${user.email}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
